@@ -11,6 +11,7 @@
 const NSString * SI_INSTANCE_STORY_REF_KEY = @"__story"; 
 const NSString * SI_INSTANCE_STEP_MAPPING_REF_KEY = @"__stepMapping"; 
 
+NSString * SI_RUN_FINISHED_NOTIFICATION = @"Simon run finished"; 
 NSString * SI_SHUTDOWN_NOTIFICATION = @"Simon shutdown"; 
 NSString * SI_RERUN_SINGLE_NOTIFICATION = @"Simon rerun story"; 
 NSString * SI_RERUN_GROUP_NOTIFICATION = @"Simon rerun group"; 
