@@ -10,15 +10,11 @@
 #import "SIStoryFileReader.h"
 #import "SIRuntime.h"
 #import "SIStoryReporter.h"
-#import "SIStoryInAppReporter.h"
 
 /**
  SIStoryRunner is the main class used to run stories. It makes use of a SIStoryFileReader to locate and read in the stories to run, and an instance of a SIRuntime instance to which is used to locate the SIStepMapping instances which provide implmentations for the story steps. Finally it uses a SIStoryReporter instance to provide a report on the results of the run.
  */
-@interface SIStoryRunner : NSObject {
-	@private 
-	SIStoryInAppReporter *ui;
-}
+@interface SIStoryRunner : NSObject
 
 /// @name Properties
 
@@ -61,10 +57,5 @@
  @see SIStory
  */
 -(void) runStories;
-
-/**
- Call this to display a UI showing all the stories and their results.
- */
--(void) displayUI;
 
 @end
